--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,40 @@
-#root {
-  max-width: 1280px;
+main {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: minmax(5rem, auto);
+  grid-template-areas:
+    "header header header header"
+    "header header header header"
+    "nav nav nav nav"
+    "article article article aside"
+    "article article article aside"
+    "article article article aside"
+    "article article article aside"
+    "footer footer footer footer";
+  max-width: 96rem;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  border: 1px solid black;
+  font-size: 2rem;
+  background-color: white;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+@media only screen and (max-width:760px) {
+	main {
+		display: grid;
+		grid-template-columns: repeat(4,1fr);
+		grid-auto-rows: minmax(5rem,auto);
+		grid-template-areas: 
+			"header header header header"
+			"header header header header"
+			"nav nav nav nav"
+			"article article article article"
+			"article article article article"
+			"aside aside aside aside"
+			"aside aside aside aside"
+			"footer footer footer footer";
+		width: 100%;
+		max-width: 96rem;
+		margin: 0 auto;
+		border: 2px solid black;
+	}
 }
